<resources>
    <string name="app_name">E-Commerce</string>
    <string name="rightAddress">Simple and convenient\nFor Shopping\nAnyday</string>
    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="g_save">SAVE</string>
    <string name="g_delete">DELETE</string>
    <string name="g_phone">Phone</string>
    <string name="g_state">State</string>
    <string name="g_city">City</string>
    <string name="g_full_name">Name</string>
    <string name="street">Street</string>
    <string name="g_address_location_ie_home">Address Location</string>
    <string name="g_address">Address</string>
    <string name="g_settings">Setting</string>
    <string name="g_edit_personal_details">name</string>
    <string name="g_orders">Order</string>
    <string name="g_all_orders">All orders</string>
    <string name="g__track_order">Track order</string>
    <string name="g_billing">Billing</string>
    <string name="g_notifications">Notification</string>
    <string name="g_regional">Regional</string>
    <string name="g_language">Language</string>
    <string name="help">Help</string>
    <string name="g_logout">Logout</string>
</resources>