<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.shopping.AddressFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_address_close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />


            <TextView
                android:id="@+id/tv_payment_methods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/g_address"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_address_close"
                app:layout_constraintStart_toEndOf="@id/img_address_close"
                app:layout_constraintTop_toTopOf="@+id/img_address_close" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="10dp"
        android:background="@drawable/nen"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/toolbar_address" />

    <EditText
        android:drawableStart="@drawable/baseline_assured_workload_24"
        android:id="@+id/ed_address_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="  Address Location"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:layout_marginTop="35dp"/>

    <EditText
        android:drawableStart="@drawable/person"
        android:id="@+id/ed_full_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="  Name"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:singleLine="true"
        android:textStyle="bold"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/ed_address_title"
        android:layout_marginTop="25dp"/>

    <EditText
        android:drawableStart="@drawable/baseline_add_location_alt_24"
        android:id="@+id/ed_street"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="  Street"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/ed_full_name" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/ed_phone"
        android:orientation="horizontal">

        <EditText
            android:drawableStart="@drawable/baseline_location_city_24"
            android:id="@+id/ed_city"
            android:layout_width="378dp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="start|center_vertical"
            android:hint="  City"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp" />

        <EditText
            android:drawableStart="@drawable/baseline_border_color_24"
            android:id="@+id/ed_state"
            android:layout_width="378dp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="start|center_vertical"
            android:hint="  State"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"/>

    </LinearLayout>
    <EditText
        android:drawableStart="@drawable/baseline_phone_24"
        android:id="@+id/ed_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:layout_marginTop="25dp"
        android:gravity="start|center_vertical"
        android:hint="  Phone"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:phoneNumber="true"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/ed_street" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintVertical_bias="0.494"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/g_delete"
            android:textAllCaps="false"
            android:textColor="@color/g_card_background"
            android:layout_marginStart="10dp"
            android:background="@color/g_blue"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottomSave"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="20dp"
            android:background="@color/g_blue"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/g_save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible"
            android:layout_weight="1"

            android:layout_marginEnd="10dp"
            />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressbar_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/g_gray500"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:layout_marginTop="45dp"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
